deleted font and changed background

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,20 +1,21 @@
 <!-- parallax -->
-<div class="uk-height-viewport uk-background-cover uk-overflow-hidden uk-light uk-flex"
+<div class="uk-height-viewport uk-background-cover uk-overflow-hidden uk-flex"
     style="background-image: url('./assets/IMG_2608.jpg');" uk-parallax="grayscale: 700%;">
     <div class="uk-width-1-2@m uk-text-center uk-margin-small-left uk-margin-small-right uk-margin-auto-vertical">
-        <h1 uk-parallax="opacity: 0,1,1; y: 0,0,0; x: 400,200,0; scale: 2,1,1; end: 40vh + 50%;"
-            style="font-family: 'Lobster', cursive; text-decoration: underline dotted;">Welcome Guests
+        <h1 uk-parallax="opacity: 0,1,1; y: 0,0,0; x: 400,200,0; scale: 2.5,1.75,1.75; end: 40vh + 50%;"
+            style="font-family: serif; color: #ffecda; text-shadow: 1px 1px #000000;">
+            Welcome Guests
         </h1>
-        <h3 uk-parallax="opacity: 0,1,1; y: 0,0,0; x: -300,0,0; scale: 0.5,1,1; end: 40vh + 50%;"
-            style="font-family: 'Lobster', cursive;">I'm Maung</h3>
-        <p uk-parallax="opacity: 0,1,1; y: 0,0,0; x: -300,0,0; scale: 0.5,1,1; end: 40vh + 50%;"
-            style="font-family: 'Lobster', cursive;">Junior Full
+        <h3 uk-parallax="opacity: 0,1,1; y: 0,0,0; x: -300,0,0; scale: 1,2,2; end: 40vh + 50%;"
+            style="font-family: serif; color: #ffecda; text-shadow: 1px 1px #000000;">I'm Maung</h3>
+        <p uk-parallax="opacity: 0,1,1; y: 0,0,0; x: -300,0,0; scale: 1,2,2; end: 40vh + 50%;"
+            style="font-family: serif; color: #ffecda; text-shadow: 1px 1px #000000;">Junior Full
             Stack Developer</p>
     </div>
 </div>
 
 <!-- body -->
-<div class="uk-section uk-background-cover uk-comment-primary" style="background-image: url('./assets/bg2.jpg');">
+<div class="uk-section uk-background-cover uk-comment-primary">
 
     <!-- about me -->
     <a class="uk-link-reset" href="https://www.linkedin.com/in/maung-htike-482b4b143/" target="_blank">
@@ -72,8 +73,8 @@
                     </div>
                     <div class="uk-card-body">
                         <h3 class="uk-card-title">Resume</h3>
-                        <p>Check out my resume
-                        </p class="uk-text-muted">
+                        <p class="uk-text-muted">Check out my resume
+                        </p>
                     </div>
                 </div>
             </a>
