--- a/views/experiences.handlebars
+++ b/views/experiences.handlebars
@@ -305,14 +305,14 @@
                     <h3 class="uk-card-title">Education:</h3>
                     <p class="uk-text-muted">
                     <ul class="uk-list uk-list-divider">
-                        <li><a
-                                href="https://extension.berkeley.edu/category/courseCategoryCertificateProfile.do?method=load&certificateId=32408422">UC
+                        <li><a href="https://extension.berkeley.edu/category/courseCategoryCertificateProfile.do?method=load&certificateId=32408422"
+                                target="_blank">UC
                                 Berkeley Extension, Berkeley, CA </a></li>
-                        <li><a
-                                href="https://catalog.skylinecollege.edu/current/programs/business-administration-for-transfer-as-t.php">Skyline
+                        <li><a href="https://catalog.skylinecollege.edu/current/programs/business-administration-for-transfer-as-t.php"
+                                target="_blank">Skyline
                                 College, San Bruno, CA</a></li>
-                        <li><a
-                                href="https://www.tecom.marines.mil/Units/Training-Command/Detachments/Marine-Corps-Detachment-Fort-Lee/3rd-Platoon/">United
+                        <li><a href="https://www.tecom.marines.mil/Units/Training-Command/Detachments/Marine-Corps-Detachment-Fort-Lee/3rd-Platoon/"
+                                target="_blank">United
                                 States Army Ordnance School, Fort Lee, VA</a></li>
                     </ul>
                     </p>
