--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,11 +29,11 @@
                 <a href="#"><span uk-icon="icon: menu; ratio: 1.5" class="uk-text-muted"></span></a>
                 <div class="uk-navbar-dropdown">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
+                        <li><a href="/">Home</a></li>
                         <li><a href="/experiences">Experiences</a></li>
                         <li><a href="/projects">Projects</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li><a
-                                href="https://docs.google.com/document/d/1dyVGCE0wPTdGDGQ02Lz4uEjZi3x9I63nLqnGaqwztl0/edit?usp=sharing">Resume</a>
+                        <li><a href="https://docs.google.com/document/d/1dyVGCE0wPTdGDGQ02Lz4uEjZi3x9I63nLqnGaqwztl0/edit?usp=sharing"
+                                target="_blank">Resume</a>
                         </li>
                         <li><a href="https://github.com/Sfzmango" target="_blank"><span
                                     uk-icon="icon: github-alt; ratio: 1.5"></span></a></li>
