edit styles to be more mobile responsive

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,13 +51,13 @@
 
 
     <div class=" uk-section uk-background-cover uk-comment-primary"
-        style="background-image: url('https://media.istockphoto.com/vectors/gray-abstract-backgriund-vector-id657622856?b=1&k=20&m=657622856&s=612x612&w=0&h=8qXVOFVPoSRKGJHdU2OWafh5uwi0YVliYph6Wq5ySdM=');">
+        style="background-image: url('./assets/background.png');">
 
         <!-- body -->
         {{{body}}}
 
         <!-- footer -->
-        <div class="uk-container uk-margin-large-top uk-text-center" style="color:black">
+        <div class="uk-container uk-margin-large-top uk-text-center" style="color:black;">
             <p>- © Maung Htike, 2022 MIT. Made using the UIkit CSS framework -</p>
         </div>
     </div>
