--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,21 +1,21 @@
 <!-- parallax -->
-<div class="uk-height-viewport uk-background-cover uk-overflow-hidden uk-flex"
+<div class="uk-height-viewport uk-background-cover uk-margin-large-bottom uk-border-rounded uk-overflow-hidden uk-flex"
     style="background-image: url('./assets/IMG_2608.jpg');" uk-parallax="grayscale: 700%;">
     <div class="uk-width-1-2@m uk-text-center uk-margin-small-left uk-margin-small-right uk-margin-auto-vertical">
-        <h1 uk-parallax="opacity: 0,1,1; y: 0,0,0; x: 400,200,0; scale: 2.5,1.75,1.75; end: 40vh + 50%;"
+        <h1 uk-parallax="opacity: 0,1,1; y: 0,0,0; x: 400,200,0; scale: 1.8,1.2,1.2; end: 40vh + 50%;"
             style="font-family: serif; color: #ffecda; text-shadow: 1px 1px #000000;">
             Welcome Guests
         </h1>
-        <h3 uk-parallax="opacity: 0,1,1; y: 0,0,0; x: -300,0,0; scale: 1,2,2; end: 40vh + 50%;"
+        <h3 uk-parallax="opacity: 0,1,1; y: 0,0,0; x: -300,0,0; scale: 1,1.5,1.5; end: 40vh + 50%;"
             style="font-family: serif; color: #ffecda; text-shadow: 1px 1px #000000;">I'm Maung</h3>
-        <p uk-parallax="opacity: 0,1,1; y: 0,0,0; x: -300,0,0; scale: 1,2,2; end: 40vh + 50%;"
+        <p uk-parallax="opacity: 0,1,1; y: 0,0,0; x: -300,0,0; scale: 1,1.5,1.5; end: 40vh + 50%;"
             style="font-family: serif; color: #ffecda; text-shadow: 1px 1px #000000;">Junior Full
             Stack Developer</p>
     </div>
 </div>
 
 <!-- body -->
-<div class="uk-section uk-background-cover uk-comment-primary">
+<div>
 
     <!-- about me -->
     <a class="uk-link-reset" href="https://www.linkedin.com/in/maung-htike-482b4b143/" target="_blank">
@@ -35,7 +35,8 @@
                         <p class="uk-text">An aspiring programmer. I have experience working with
                             electro-optical equipment,
                             conducting reliability testing on solar equipment, and also in direct sales.</p>
-                        <p class="uk-comment-meta uk-margin-remove-top">Currently Attending UC Berkeley's Full Stack
+                        <p class="uk-comment-meta uk-margin-remove-top">Currently Attending UC Berkeley's Full
+                            Stack
                             Course
                         </p>
                     </div>
@@ -49,14 +50,14 @@
         <div>
             <a href="/experiences" style="text-decoration: none;">
                 <div class="uk-card uk-card-default uk-box-shadow-hover-xlarge  uk-border-rounded">
-                    <div class="uk-card-media-top">
-                        <img src="./assets/tech.PNG" width="1800" height="800" alt="work picture"
-                            style="border-top-left-radius: 2%; border-top-right-radius: 2%;">
-                    </div>
                     <div class="uk-card-body">
                         <h3 class="uk-card-title">Experiences</h3>
                         <p class="uk-text-muted">Learn about my qualifications
                         </p>
+                    </div>
+                    <div class="uk-card-media-bottom">
+                        <img src="./assets/tech.PNG" width="1800" height="800" alt="work picture"
+                            style="border-bottom-left-radius: 2%; border-bottom-right-radius: 2%;">
                     </div>
                 </div>
             </a>
@@ -67,14 +68,14 @@
             <a href="https://docs.google.com/document/d/1dyVGCE0wPTdGDGQ02Lz4uEjZi3x9I63nLqnGaqwztl0/edit?usp=sharing"
                 style="text-decoration: none;">
                 <div class="uk-card uk-card-default uk-box-shadow-hover-xlarge  uk-border-rounded">
-                    <div class="uk-card-media-top">
-                        <img src="./assets/resume.png" width="1800" height="1200" alt="resume picture"
-                            style="border-top-left-radius: 2%; border-top-right-radius: 2%;">
-                    </div>
                     <div class="uk-card-body">
                         <h3 class="uk-card-title">Resume</h3>
                         <p class="uk-text-muted">Check out my resume
                         </p>
+                    </div>
+                    <div class="uk-card-media-bottom">
+                        <img src="./assets/resume.png" width="1800" height="1200" alt="resume picture"
+                            style="border-bottom-left-radius: 2%; border-bottom-right-radius: 2%;">
                     </div>
                 </div>
             </a>
@@ -86,20 +87,20 @@
             <!-- big projects card -->
             <div class="uk-card uk-card-default uk-box-shadow-hover-xlarge uk-border-rounded ">
                 <a href="/projects" style="text-decoration: none;">
-                    <div class="uk-card-media-top">
+                    <div class="uk-card-body">
+                        <h3 class="uk-card-title">Projects</h3>
+                        <p class="uk-text-muted">Check out things I have made
+                        </p>
+                    </div>
+                    <div class="uk-card-media-bottom">
                         <div class="uk-child-width-expand@s uk-text-center uk-margin-large-bottom" uk-grid>
                             <img src="./assets/back-end.png" width="1800" height="1200" alt="projects back-end picture"
-                                style="border-top-left-radius: 2%;">
+                                style="border-bottom-left-radius: 2%;">
                             <img src="./assets/dnc.png" width="1500" height="1200"
                                 alt="project date night and chill picture">
                             <img src="./assets/vacationawaits.png" width="1800" height="1200"
                                 alt="projects vacation awaits picture">
                         </div>
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title">Projects</h3>
-                        <p class="uk-text-muted">Check out things I have made
-                        </p>
                     </div>
             </div>
             </a>
