--- a/views/experiences.handlebars
+++ b/views/experiences.handlebars
@@ -3,32 +3,9 @@
     Here are some of the thing's I have
     worked on in the past:</h1>
 
-<div class="uk-child-width-expand@s uk-text-center uk-margin-large-bottom" uk-grid>
-
-    <!-- resume card -->
-    <div class="uk-width-auto uk-align-center">
-        <a href="https://docs.google.com/document/d/1dyVGCE0wPTdGDGQ02Lz4uEjZi3x9I63nLqnGaqwztl0/edit?usp=sharing"
-            style="text-decoration: none;">
-            <div class="uk-card uk-card-default uk-box-shadow-hover-xlarge  uk-border-rounded">
-                <div class="uk-card-media-top">
-                    <img src="./assets/resume.png" width="600" height="500" alt="resume picture"
-                        style="border-top-left-radius: 1%; border-top-right-radius: 1%;">
-                </div>
-                <div class="uk-card-body">
-                    <h1 class="uk-card-title">Resume</h1>
-                </div>
-            </div>
-        </a>
-    </div>
-</div>
-
 <div class="uk-container">
 
     <!-- Work Experience -->
-    <h1 class="uk-text-center uk-margin-medium-top uk-margin-medium-bottom"
-        style="font-family: serif; color: #585858; text-shadow: 1px 1px #000000;">Work Experience:
-    </h1>
-
     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin-large-bottom uk-box-shadow-hover-xlarge"
         uk-grid>
         <div class="uk-card-media-left uk-cover-container">
@@ -42,7 +19,8 @@
                     October 2020 to Present
                 </h3>
                 </h3>
-                <p>I am currently working as an 1099 independent contractor whose job responsibilities are to
+                <p class="uk-text-muted">I am currently working as an 1099 independent contractor whose job
+                    responsibilities are to
                     find possible qualifying households that might qualify for solar and hopefully direct them
                     into going green while also saving them money on their electricity bill. I work with the
                     customer to try to fulfill their needs and goals for solar while also not jeopardizing my
@@ -263,6 +241,40 @@
                             <div>
                                 <div class="uk-card uk-card-default uk-box-shadow-hover-xlarge">
                                     <div class="uk-card-media-top">
+                                        <!-- <img src=""
+                                                    width="1800" height="1200" alt=""> -->
+                                    </div>
+                                    <div class="uk-card-body">
+                                        <h3 class="uk-card-title"> Berkeley Coding Boot Camp Certificate</h3>
+                                        <p class="uk-text-muted">UC Berkeley Extension, June 2022</p>
+                                        <!-- <p>
+
+                                                </p> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <div class="uk-card uk-card-default uk-box-shadow-hover-xlarge">
+                                    <div class="uk-card-media-top">
+                                        <!-- <img src=""
+                                                    width="1800" height="1200" alt=""> -->
+                                    </div>
+                                    <div class="uk-card-body">
+                                        <h3 class="uk-card-title">AS-T, Business Administration</h3>
+                                        <p class="uk-text-muted">Skyline College, May 2022</p>
+                                        <!-- <p>
+
+                                                </p> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <div class="uk-card uk-card-default uk-box-shadow-hover-xlarge">
+                                    <div class="uk-card-media-top">
                                         <img src="https://media-exp1.licdn.com/dms/image/C4E2DAQFLERNoknd3vg/profile-treasury-image-shrink_800_800/0/1602125896806?e=1653685200&v=beta&t=-guv7_flklIoGnubaHrb9Xqzz8Hu2dhyg3zN22WgvWM"
                                             width="1800" height="1200" alt="">
                                     </div>
@@ -272,23 +284,6 @@
                                         <p class="uk-text-muted">2018 - 2019</p>
                                         <p>Certified technician for all things relating with optical equipment
                                             in the Marine Corps</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <div class="uk-card uk-card-default uk-box-shadow-hover-xlarge">
-                                    <div class="uk-card-media-top">
-                                        <!-- <img src="https://media-exp1.licdn.com/dms/image/C4E2DAQFLERNoknd3vg/profile-treasury-image-shrink_800_800/0/1602125896806?e=1653685200&v=beta&t=-guv7_flklIoGnubaHrb9Xqzz8Hu2dhyg3zN22WgvWM"
-                                                    width="1800" height="1200" alt=""> -->
-                                    </div>
-                                    <div class="uk-card-body">
-                                        <h3 class="uk-card-title">AS-T, Business Administration</h3>
-                                        <p class="uk-text-muted">Skyline College, May 2022</p>
-                                        <!-- <p>
-
-                                                </p> -->
                                     </div>
                                 </div>
                             </div>
@@ -305,7 +300,7 @@
                     <h3 class="uk-card-title">Education:</h3>
                     <p class="uk-text-muted">
                     <ul class="uk-list uk-list-divider">
-                        <li><a href="https://extension.berkeley.edu/category/courseCategoryCertificateProfile.do?method=load&certificateId=32408422"
+                        <li><a href="https://extension.berkeley.edu/public/category/courseCategoryCertificateProfile.do?method=load&certificateId=32408422"
                                 target="_blank">UC
                                 Berkeley Extension, Berkeley, CA </a></li>
                         <li><a href="https://catalog.skylinecollege.edu/current/programs/business-administration-for-transfer-as-t.php"
