change resume link

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -65,8 +65,7 @@
 
         <!-- resume card -->
         <div>
-            <a href="https://docs.google.com/document/d/1dyVGCE0wPTdGDGQ02Lz4uEjZi3x9I63nLqnGaqwztl0/edit?usp=sharing"
-                style="text-decoration: none;">
+            <a href="./assets/resume.pdf" target="_blank" style="text-decoration: none;">
                 <div class="uk-card uk-card-default uk-box-shadow-hover-xlarge  uk-border-rounded">
                     <div class="uk-card-body">
                         <h3 class="uk-card-title">Resume</h3>
