--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,8 +32,7 @@
                         <li><a href="/">Home</a></li>
                         <li><a href="/experiences">Experiences</a></li>
                         <li><a href="/projects">Projects</a></li>
-                        <li><a href="https://docs.google.com/document/d/1dyVGCE0wPTdGDGQ02Lz4uEjZi3x9I63nLqnGaqwztl0/edit?usp=sharing"
-                                target="_blank">Resume</a>
+                        <li><a href="./assets/resume.pdf" target="_blank">Resume</a>
                         </li>
                         <li><a href="https://github.com/Sfzmango" target="_blank"><span
                                     uk-icon="icon: github-alt; ratio: 1.5"></span></a></li>
