--- a/views/experiences.handlebars
+++ b/views/experiences.handlebars
@@ -14,22 +14,19 @@
         </div>
         <div>
             <div class="uk-card-body">
-                <h1>Solar Sales Representative</h1>
+                <h1>Solar Consultant</h1>
                 <h3 class="uk-card-title">Solar Energy Partners - North Bay, CA <br>
                     October 2020 to Present
                 </h3>
                 </h3>
-                <p class="uk-text-muted">I am currently working as an 1099 independent contractor whose job
-                    responsibilities are to
-                    find possible qualifying households that might qualify for solar and hopefully direct them
-                    into going green while also saving them money on their electricity bill. I work with the
-                    customer to try to fulfill their needs and goals for solar while also not jeopardizing my
-                    commission to a loss. Not only do I have to generate leads, but I also have to prepare a
-                    design proposal with our upstream and downstream partners for the customer and negotiate
-                    with them to close a deal that they are happy with. After an agreement has been signed off,
-                    I follow up with the customers and our partners occasionally for status updates and, if
-                    possible, to expedite them up the schedule until the solar system has been given “Permission
-                    To Operate.”
+                <p class="uk-text-muted">I am currently working as a solar consultant where my job responsibilities are
+                    to find possible qualifying households that might qualify for solar and hopefully direct them into
+                    going green while also saving them money on their electricity bill. I work with the customer to try
+                    to fulfill their needs and goals for solar. Not only do I have to generate leads, but I also have to
+                    prepare a design proposal with our upstream and downstream partners for the customer and negotiate
+                    with them to close a deal that they are happy with. After an agreement has been signed off, I follow
+                    up with the customers and our partners occasionally for status updates and, if possible, to expedite
+                    them up the schedule until the solar system has been given “Permission To Operate.”
                 </p>
             </div>
         </div>
