add diploma photo

--- a/views/experiences.handlebars
+++ b/views/experiences.handlebars
@@ -272,8 +272,8 @@
                             <div>
                                 <div class="uk-card uk-card-default uk-box-shadow-hover-xlarge">
                                     <div class="uk-card-media-top">
-                                        <img src="https://media-exp1.licdn.com/dms/image/C4E2DAQFLERNoknd3vg/profile-treasury-image-shrink_800_800/0/1602125896806?e=1653685200&v=beta&t=-guv7_flklIoGnubaHrb9Xqzz8Hu2dhyg3zN22WgvWM"
-                                            width="1800" height="1200" alt="">
+                                        <img src="./assets/electro-optical ordnance diploma.jpg" width="1800"
+                                            height="1200" alt="">
                                     </div>
                                     <div class="uk-card-body">
                                         <h3 class="uk-card-title">Diploma, 2171-Electro-Optical Ordinance
