--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="uk-width-1-1\@s uk-background-cover" uk-navbar style="background-color: #222222;">
+    <nav class="uk-width-1-1\@s uk-background-cover" uk-navbar style="background: #222222;">
         <div class="uk-navbar-left">
             <ul class="uk-margin-small-left uk-navbar-nav">
                 <li><a href="/"><img src="./assets/logo.png" alt="website logo" width="100px" /></a></li>
